# Emmanoel_project

./: .gitignore  Dockerfile  Procfile  ToDo.txt  fly.toml  manage.py  pyproject.toml  requirements.txt
Album_app/: models.py
Album_app/migrations/: 0001_initial.py  0002_initial.py
Amigo_app/: admin.py  apps.py  models.py
Amigo_app/migrations/: 0001_initial.py  0002_alter_solicitacaoamizade_mensagem_and_more.py  0002_alter_solicitacaoamizade_status_amigos.py  0003_delete_amigos.py
Comentario_app/: apps.py
Core_app/: consumers.py  routing.py  urls.py  views.py
Core_app/api/: serializers.py  urls.py  viewsets.py
Core_app/migrations/: 0001_initial.py  0002_delete_perfil.py
Core_app/tests/: test_Core_app.py
Emmanoel_project/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
Grupo_app/: apps.py  models.py
Grupo_app/migrations/: 0001_initial.py  0002_initial.py  0002_participante_administrador_alter_grupo_criado_em_and_more.py  0003_alter_participante_participante.py  0004_mensagemparticipante.py
Mensagem_app/: apps.py  models.py
Mensagem_app/migrations/: 0001_initial.py  0002_initial.py
Perfil_app/: apps.py  models.py
Perfil_app/migrations/: 0001_initial.py  0002_initial.py  0002_rename_data_inserido_perfil_data_cadastro_and_more.py  0003_amigos_perfil_amigos.py  0003_perfil_descricao_perfil_foto_perfil_sexo_perfil_user.py  0004_alter_perfil_amigos_alter_perfil_nick_name.py  0004_alter_perfil_user.py  0005_alter_perfil_nick_name.py  0006_alter_perfil_nick_name.py
Postagem_app/: admin.py  apps.py  models.py
User_app/: models.py
(+9 files in other folders)
