[tool.poetry]
name = "emmanoel-project"
version = "0.1.0"
description = "Projeto inicial do aplicativo de rede social, atualmente em fase beta"
authors = ["Rip4568 <63131796+Rip4568@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "emmanoel_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django-rest-auth = "^0.9.5"
django-extensions = "^3.2.1"
pytest = "^7.2.0"
django = "^4.1.3"
django-unicorn = "^0.49.2"
whitenoise = "^6.2.0"
psycopg2 = "^2.9.5"
psycopg2-binary = "^2.9.5"
channels-redis = "^4.0.0"
gunicorn = "^20.1.0"
django-celery-beat = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
